add js data and update html & css

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Simple Navbar</title>
 </head>
 <body>
     <nav>
         <div class="logo">
-            <h1><a href="#">Logo</a></h1>
+            <h1><a href="#"><i class="fa-solid fa-house"></i></a></h1>
         </div>
-        <ul>
+        <ul class="menu-list">
             <li><a href="#">Home</a></li>
             <li><a href="#products">Products</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact-us">Contact-Us</a></li>
             <li><a href="#log-in">Log-In</a></li>
         </ul>
-        <div class="menu-icon">
-            <i>Menu</i>
+        <div class="menu-icon" id="menu-icon">
+            <i class="fa-solid fa-bars"></i>
         </div>
     </nav>
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/567103f59d.js" crossorigin="anonymous"></script>
 </body>
 </html>
